# Triad-TEE-Trusted-Time

./: .gitignore  Makefile  Note.md  README.md  README2.md  irq_redirect.sh  monitor_irq.sh  sgxenv.mk
AEXTest/: Makefile  Note.md  README.md  app  commands.md  requirements.txt
AEXTest/App/: App.cpp  Enclave_u.c  Enclave_u.h
AEXTest/Enclave/: Enclave.cpp  Enclave.edl  Enclave_t.c  Enclave_t.h
AEXTest/analysis/: aex_count.sh  aex_difference.py  aex_timeline.py  aex_tspAEX.py  counter_precision_test.sh  gen_plots.sh  plot_aex_v_count_distributions.py  plot_count_distributions.py
AEXTest/tsc_offsetter/: tsc_offsetter.cpp  tsc_offsetter.sh
analysis/: aex.py  plot_count_distributions_triad.py  plot_ts_drift.py  sim_interrupts.sh
multi_connections/: client.cpp  client.h  common.h  main.cpp  server.h
multi_connections3/: client.cpp  common.cpp  server.cpp
multi_connections3/test_dir/: CMakeLists.txt  test.cpp
mvp_udp/: Makefile  client.cpp  server.cpp
node/: README.md
node/Enclave/: ENode.cpp  ENode.h  Enclave.edl
node/common/: enclave.edl  openssl_utility.h  ucommon.cpp  utility.h
node/server/: tls_server.edl
node1.5/common/: common.h  (+2 more)
server/: tls_server.edl
simple_client/: Makefile  Notes.md  README.md  client.cpp  client.h  common.cpp  main.cpp  server.cpp
simple_client3/: client.cpp  common.h  main.cpp  server.h
simple_server/: Makefile  README.md  client.cpp  client.h  common.cpp  main.cpp  server.cpp  server.h  ssl_client
simple_server2/: CMakeLists.txt  client.cpp  server.cpp
triad_udp/: Makefile  README.md
user/: main.cpp
(+90 files in other folders)
